--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-BURGER_API_URL=https://norma.nomoreparties.space/api
+# BURGER_API_URL=https://norma.nomoreparties.space/api
+
+BURGER_API_URL=https://norma.education-services.ru/api
